Updated flow map to propositional symbol map.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="vis"></div>
 
     <script>
-      var spec = "js/flowmap.vg.json";
+      var spec = "js/prop_symbol_map.vg.json";
 
       vegaEmbed("#vis", spec).then(console.log).catch(console.warn);
     </script>
